projeto dio projeto github

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+<strong>teste git</strong>
     <div class="instagram-wrapper">
         <div class="instagram-esquerda">
             <img src="celular2.png" alt="celular">
